updating to more comprehensive tests

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -9,5 +9,6 @@
 <ion-content padding>
   You should visit some item pages.
   <button ion-button (tap)="go()">press me</button>
+  <button ion-button (tap)="reallyGo()">what about me</button>
 
 </ion-content>
